Started the main application layout

--- a/frontend/src/components/routing/Layouts/MainLayout/MainLayout.module.css
+++ b/frontend/src/components/routing/Layouts/MainLayout/MainLayout.module.css
@@ -1,6 +1,9 @@
 .root {
   height: fit-content;
   min-height: 100vh;
-  background-color: var(--bg-clr);
+  background-color: var(--arash-bg-clr);
+}
+
+.content {
   padding: 1.5rem 2rem;
 }
