--- a/frontend/src/components/pages/Auth/Auth.module.css
+++ b/frontend/src/components/pages/Auth/Auth.module.css
@@ -1,21 +1,8 @@
-.legoContainer {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.legoContainer > h1 {
-  margin: 0;
-  color: var(--arash-primary-clr);
-  text-shadow: 0.5px 0.5px var(--arash-black-clr);
-}
-
 .form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 100%;
-  padding: 0 2.5rem;
+  min-width: 80%;
 }
 
 .form > input {
