--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+:root {
+  --top-menu-height: 64px;
+  --left-menu-open-width: 210px;
+  --left-menu-close-width: 64px;
+}
