--- a/frontend/src/components/routing/Layouts/MainLayout/MainLayout.module.css
+++ b/frontend/src/components/routing/Layouts/MainLayout/MainLayout.module.css
@@ -8,5 +8,5 @@
 .content {
   position: absolute;
   top: var(--top-menu-height);
-  left: calc(var(--left-menu-open-width) + 5px);
+  left: calc(var(--side-menu-width) + 10px);
 }
