--- a/frontend/src/components/routing/Layouts/MainLayout/MainLayout.module.css
+++ b/frontend/src/components/routing/Layouts/MainLayout/MainLayout.module.css
@@ -1,5 +1,5 @@
 .content {
   position: absolute;
   top: var(--top-menu-height);
-  left: calc(var(--side-menu-width) + 10px);
+  left: calc(var(--taken-space-by-menu) + 10px);
 }
